# TNM084

./: .gitignore  README.md
LAb2/: simple.rib  simple.tif  simple_displacement.sl  simple_displacement.slx  simple_surface.sl  simple_surface.slx  voronoitest.rib  voronoitest.sl  voronoitest.slx
lab1/: CMakeLists.txt  SWshading.c  tnm084_lab1.c  triangleSoup.c
